--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "edofre/laravel-fullcalendar-scheduler": "*",
         "fxp/composer-asset-plugin": "^1.3",
         "cmgmyr/messenger": "^2.14",
-        "brozot/laravel-fcm": "^1.2"
+        "brozot/laravel-fcm": "^1.2",
+        "laravolt/avatar": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
